<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MainActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/editview_hint"
        app:layout_constraintBottom_toTopOf="@id/infoContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        app:layout_constraintBottom_toTopOf="@+id/btnGetInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText">

        <TextView
            android:id="@+id/tvNumberTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_title"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/tvNumberValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvCountryNameTitle"/>

        <TextView
            android:id="@+id/tvNumberValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tvNumberTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCountryNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_name_title"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNumberValue" />

        <TextView
            android:id="@+id/tvCountryNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tvCountryNameTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvNumberValue" />

        <TextView
            android:id="@+id/tvLocationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_title"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCountryNameTitle" />

        <TextView
            android:id="@+id/tvLocationValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tvLocationTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvCountryNameValue" />

        <TextView
            android:id="@+id/tvCarierTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carier_title"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationTitle" />

        <TextView
            android:id="@+id/tvCarierValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/tvCarierTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationValue" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnGetInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoContainer" />

    <LinearLayout
        android:id="@+id/badNetworkConnectionPage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvBadNetworkConnectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:layout_marginBottom="12dp"
            android:text="@string/bad_network_connection_title"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvBadNetworkConnectionMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bad_network_connection_message"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>